# ImageProcessServer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
util/: CMakeLists.txt
util/include/: msgqueue.h
util/src/: JPEGDecoder.cpp  msgqueue.cpp
